docs/generated/2.4.1/Classnames.md

## API\Request
## Archive
## ArchiveProcessor
## ArchiveProcessor\Parameters
## Common
## Config
## Console
## DataAccess\LogAggregator
## DataTable
## DataTable\BaseFilter
## DataTable\Filter\AddColumnsProcessedMetrics
## DataTable\Filter\AddColumnsProcessedMetricsGoal
## DataTable\Filter\AddSummaryRow
## DataTable\Filter\BeautifyRangeLabels
## DataTable\Filter\BeautifyTimeRangeLabels
## DataTable\Filter\CalculateEvolutionFilter
## DataTable\Filter\ColumnCallbackAddColumn
## DataTable\Filter\ColumnCallbackAddColumnPercentage
## DataTable\Filter\ColumnCallbackAddColumnQuotient
## DataTable\Filter\ColumnCallbackAddMetadata
## DataTable\Filter\ColumnCallbackDeleteRow
## DataTable\Filter\ColumnDelete
## DataTable\Filter\ExcludeLowPopulation
## DataTable\Filter\GroupBy
## DataTable\Filter\Limit
## DataTable\Filter\MetadataCallbackAddMetadata
## DataTable\Filter\MetadataCallbackReplace
## DataTable\Filter\Pattern
## DataTable\Filter\PatternRecursive
## DataTable\Filter\ReplaceColumnNames
## DataTable\Filter\ReplaceSummaryRowLabel
## DataTable\Filter\Sort
## DataTable\Filter\Truncate
## DataTable\Map
## DataTable\Row
## DataTable\Simple
## Date
## Db
## DbHelper
## Filesystem
## FrontController
## Http
## IP
## Log
## Mail
## Menu\MenuAbstract
## Menu\MenuAdmin
## Menu\MenuReporting
## Menu\MenuTop
## Menu\MenuUser
## Metrics
## MetricsFormatter
## NoAccessException
## Nonce
## Notification
## Notification\Manager
## Option
## Period
## Period\Range
## Piwik
## Plugin
## Plugin\API
## Plugin\Archiver
## Plugin\Controller
## Plugin\Manager
## Plugin\Menu
## Plugin\Settings
## Plugin\Tasks
## Plugin\ViewDataTable
## Plugin\Visualization
## Plugin\Widgets
## Plugins\Actions\Widgets
## Plugins\CoreHome\Widgets
## Plugins\CoreVisualizations\Visualizations\Cloud
## Plugins\CoreVisualizations\Visualizations\Graph
## Plugins\CoreVisualizations\Visualizations\HtmlTable
## Plugins\CoreVisualizations\Visualizations\HtmlTable\AllColumns
## Plugins\CoreVisualizations\Visualizations\JqplotGraph
## Plugins\CoreVisualizations\Visualizations\JqplotGraph\Bar
## Plugins\CoreVisualizations\Visualizations\JqplotGraph\Evolution
## Plugins\CoreVisualizations\Visualizations\JqplotGraph\Pie
## Plugins\CustomVariables\Widgets
## Plugins\DevicesDetection\Widgets
## Plugins\Events\Widgets
## Plugins\ExamplePlugin\Widgets
## Plugins\ExampleRssWidget\Widgets
## Plugins\ExampleVisualization\SimpleTable
## Plugins\Goals\Visualizations\Goals
## Plugins\Goals\Widgets
## Plugins\Insights\Visualizations\Insight
## Plugins\Insights\Widgets
## Plugins\Live\VisitorLog
## Plugins\Live\Widgets
## Plugins\Provider\Widgets
## Plugins\Referrers\Widgets
## Plugins\SEO\Widgets
## Plugins\UserCountry\Widgets
## Plugins\UserSettings\Widgets
## Plugins\UsersManager\UserPreferences
## Plugins\VisitFrequency\Widgets
## Plugins\VisitTime\Widgets
## Plugins\VisitorInterest\Widgets
## Plugins\VisitsSummary\Widgets
## RankingQuery
## ScheduledTask
## ScheduledTime
## ScheduledTime\Daily
## ScheduledTime\Hourly
## ScheduledTime\Monthly
## ScheduledTime\Weekly
## Segment
## SettingsPiwik
## SettingsServer
## Settings\Setting
## Settings\SystemSetting
## Settings\UserSetting
## Singleton
## Site
## TaskScheduler
## Url
## UrlHelper
## Version
## View
## ViewDataTable\Config
## ViewDataTable\Factory
## ViewDataTable\RequestConfig
## View\UIControl
## WidgetsList
